@@ -76,7 +76,9 @@ public class JavaJudge extends Judge
             else
             {
                 //Run
-                Process execProcess = Runtime.getRuntime().exec("cmd /c docker exec " + containerId +
+                Process p = Runtime.getRuntime().exec(new String[]{"dos2unix", answerPath});
+                p.waitFor();
+                Process execProcess = Runtime.getRuntime().exec("cmd /c docker exec -i" + containerId +
                         " java " +  filename + " <" + testcasePath + " >>" + outputPath);
                 execProcess.waitFor();
                 int exitVal = execProcess.exitValue();
